# toxicity_agent_project_final

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
configs/: fairness_slices.yaml  infer.yaml  infer_final.yaml  infer_multilingual_extension.yaml  policy_rules.yaml  train.yaml  train_final.yaml  train_vi.yaml
data/: README.md  download_dataset.py
docs/: architecture.md  auto_report_slides.md  continual_learning_monitoring.md  data_description.md  error_analysis.md  ethics_statement.md  fairness_evaluation.md  model_versioning.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md
models/: README.md
notebooks/: 01_error_fairness_latency.ipynb
scripts/: run_api.sh  run_autopilot.sh  run_benchmark.sh  run_error_analysis.sh  run_evaluate.sh  run_fairness.sh  run_generate_report.sh  run_generate_slides.sh  run_train_colab.sh
src/toxicity_agent/: cli.py  config.py  logging_utils.py  utils.py
src/toxicity_agent/agent/: actions.py  factory.py  human_review_queue.py  language.py  moderation_agent.py  policy_store.py
src/toxicity_agent/analysis/: __init__.py  error_analysis.py  fairness.py  latency.py  thresholds.py
src/toxicity_agent/api/: dependencies.py  main.py  schemas.py
src/toxicity_agent/automation/: __init__.py  (+1 more)
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_grading_checklist.py  test_vi_extension.py
training on colab/: Toxicity_Agent_Colab_Training_v12_ULTIMATE_RESUME_H100_AUTOPILOT_MAX_COMPAT (2).ipynb
(+22 files in other folders)
